// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a button 1`] = `
._knMBno[disabled] {
  cursor: not-allowed;
}

._gRExQX[disabled] {
  opacity: 0.35;
}

._eGbica {
  width: max-content;
}

._ftwEqf {
  white-space: nowrap;
}

._kmyMpM {
  padding-bottom: var(--space-2);
}

._fGrnfI {
  padding-top: var(--space-2);
}

._hCA-dkJ {
  padding-right: var(--space-4);
}

._eJwsRe {
  padding-left: var(--space-4);
}

._kaGCev {
  text-decoration-line: none;
}

._kKqLFw {
  transition-timing-function: ease-out;
}

._efExVU {
  transition-duration: 125ms;
}

._eaYTuA {
  transition-property: all;
}

._laGdYr {
  line-height: 1.4;
}

._bIcFyi {
  letter-spacing: 0.02em;
}

._ddSdla {
  height: var(--sizes-2);
}

._ckmCCf {
  font-weight: 500;
}

._dIHnma {
  font-size: var(--fontSizes-md);
}

._oIZSq {
  font-family: var(--fonts-sans);
}

._dtUAqZ {
  align-items: center;
}

._jBdvvl {
  justify-content: center;
}

._iqmwNh {
  display: flex;
}

._cKSYdt {
  cursor: pointer;
}

._cmjVcV {
  border-bottom-right-radius: var(--radii-1);
}

._cvjZAR {
  border-top-right-radius: var(--radii-1);
}

._fVdSKi {
  border-top-left-radius: var(--radii-1);
}

._hxITlq {
  border-bottom-left-radius: var(--radii-1);
}

._foQeyu {
  border-left-style: none;
}

._lmVhDS {
  border-bottom-style: none;
}

._jOpMN {
  border-right-style: none;
}

._eEUDVO {
  border-top-style: none;
}

._logdPK._logdPK._logdPK:active {
  background-color: var(--colors-primary500);
}

._iRIupi._iRIupi:not([disabled]):hover,
._iRIupi:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

._iePRtq[disabled] {
  color: var(--colors-tonal600);
}

._kkUuZE[disabled] {
  background-color: var(--colors-tonal300);
}

._htOODa {
  color: white;
}

._hPXiuU {
  background-color: var(--colors-primary500);
}

<div>
  <button
    class="_hPXiuU _htOODa _kkUuZE _iePRtq _iRIupi _logdPK _eEUDVO _jOpMN _lmVhDS _foQeyu _hxITlq _fVdSKi _cvjZAR _cmjVcV _cKSYdt _iqmwNh _jBdvvl _dtUAqZ _oIZSq _dIHnma _ckmCCf _ddSdla _bIcFyi _laGdYr _eaYTuA _efExVU _kKqLFw _kaGCev _eJwsRe _hCA-dkJ _fGrnfI _kmyMpM _ftwEqf _eGbica _gRExQX _knMBno scid-kemCgU"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
._knMBno[disabled] {
  cursor: not-allowed;
}

._gRExQX[disabled] {
  opacity: 0.35;
}

._eGbica {
  width: max-content;
}

._ftwEqf {
  white-space: nowrap;
}

._kmyMpM {
  padding-bottom: var(--space-2);
}

._fGrnfI {
  padding-top: var(--space-2);
}

._hCA-dkJ {
  padding-right: var(--space-4);
}

._eJwsRe {
  padding-left: var(--space-4);
}

._kaGCev {
  text-decoration-line: none;
}

._kKqLFw {
  transition-timing-function: ease-out;
}

._efExVU {
  transition-duration: 125ms;
}

._eaYTuA {
  transition-property: all;
}

._laGdYr {
  line-height: 1.4;
}

._bIcFyi {
  letter-spacing: 0.02em;
}

._ddSdla {
  height: var(--sizes-2);
}

._ckmCCf {
  font-weight: 500;
}

._dIHnma {
  font-size: var(--fontSizes-md);
}

._oIZSq {
  font-family: var(--fonts-sans);
}

._dtUAqZ {
  align-items: center;
}

._jBdvvl {
  justify-content: center;
}

._iqmwNh {
  display: flex;
}

._cKSYdt {
  cursor: pointer;
}

._cmjVcV {
  border-bottom-right-radius: var(--radii-1);
}

._cvjZAR {
  border-top-right-radius: var(--radii-1);
}

._fVdSKi {
  border-top-left-radius: var(--radii-1);
}

._hxITlq {
  border-bottom-left-radius: var(--radii-1);
}

._foQeyu {
  border-left-style: none;
}

._lmVhDS {
  border-bottom-style: none;
}

._jOpMN {
  border-right-style: none;
}

._eEUDVO {
  border-top-style: none;
}

._logdPK._logdPK._logdPK:active {
  background-color: var(--colors-primary500);
}

._iRIupi._iRIupi:not([disabled]):hover,
._iRIupi:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

._iePRtq[disabled] {
  color: var(--colors-tonal600);
}

._kkUuZE[disabled] {
  background-color: var(--colors-tonal300);
}

._htOODa {
  color: white;
}

._hPXiuU {
  background-color: var(--colors-primary500);
}

<div>
  <button
    class="_hPXiuU _htOODa _kkUuZE _iePRtq _iRIupi _logdPK _eEUDVO _jOpMN _lmVhDS _foQeyu _hxITlq _fVdSKi _cvjZAR _cmjVcV _cKSYdt _iqmwNh _jBdvvl _dtUAqZ _oIZSq _dIHnma _ckmCCf _ddSdla _bIcFyi _laGdYr _eaYTuA _efExVU _kKqLFw _kaGCev _eJwsRe _hCA-dkJ _fGrnfI _kmyMpM _ftwEqf _eGbica _gRExQX _knMBno scid-kemCgU"
    disabled=""
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled secondary outline button 1`] = `
._gFGdQM._gFGdQM._gFGdQM:active {
  background-color: var(--colors-secondary500);
}

._bdrXEe._bdrXEe:not([disabled]):hover,
._bdrXEe:not([disabled]):focus {
  background-color: var(--colors-secondary700);
}

._hTVHdC {
  background-color: var(--colors-secondary500);
}

._knMBno[disabled] {
  cursor: not-allowed;
}

._gRExQX[disabled] {
  opacity: 0.35;
}

._eGbica {
  width: max-content;
}

._ftwEqf {
  white-space: nowrap;
}

._kmyMpM {
  padding-bottom: var(--space-2);
}

._fGrnfI {
  padding-top: var(--space-2);
}

._hCA-dkJ {
  padding-right: var(--space-4);
}

._eJwsRe {
  padding-left: var(--space-4);
}

._kaGCev {
  text-decoration-line: none;
}

._kKqLFw {
  transition-timing-function: ease-out;
}

._efExVU {
  transition-duration: 125ms;
}

._eaYTuA {
  transition-property: all;
}

._laGdYr {
  line-height: 1.4;
}

._bIcFyi {
  letter-spacing: 0.02em;
}

._ddSdla {
  height: var(--sizes-2);
}

._ckmCCf {
  font-weight: 500;
}

._dIHnma {
  font-size: var(--fontSizes-md);
}

._oIZSq {
  font-family: var(--fonts-sans);
}

._dtUAqZ {
  align-items: center;
}

._jBdvvl {
  justify-content: center;
}

._iqmwNh {
  display: flex;
}

._cKSYdt {
  cursor: pointer;
}

._cmjVcV {
  border-bottom-right-radius: var(--radii-1);
}

._cvjZAR {
  border-top-right-radius: var(--radii-1);
}

._fVdSKi {
  border-top-left-radius: var(--radii-1);
}

._hxITlq {
  border-bottom-left-radius: var(--radii-1);
}

._foQeyu {
  border-left-style: none;
}

._lmVhDS {
  border-bottom-style: none;
}

._jOpMN {
  border-right-style: none;
}

._eEUDVO {
  border-top-style: none;
}

._iePRtq[disabled] {
  color: var(--colors-tonal600);
}

._kkUuZE[disabled] {
  background-color: var(--colors-tonal300);
}

._htOODa {
  color: white;
}

<div>
  <button
    class="_hTVHdC _htOODa _kkUuZE _iePRtq _bdrXEe _gFGdQM _eEUDVO _jOpMN _lmVhDS _foQeyu _hxITlq _fVdSKi _cvjZAR _cmjVcV _cKSYdt _iqmwNh _jBdvvl _dtUAqZ _oIZSq _dIHnma _ckmCCf _ddSdla _bIcFyi _laGdYr _eaYTuA _efExVU _kKqLFw _kaGCev _eJwsRe _hCA-dkJ _fGrnfI _kmyMpM _ftwEqf _eGbica _gRExQX _knMBno scid-kemCgU"
    disabled=""
    variant="outline"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
._knMBno[disabled] {
  cursor: not-allowed;
}

._gRExQX[disabled] {
  opacity: 0.35;
}

._eGbica {
  width: max-content;
}

._ftwEqf {
  white-space: nowrap;
}

._kmyMpM {
  padding-bottom: var(--space-2);
}

._fGrnfI {
  padding-top: var(--space-2);
}

._hCA-dkJ {
  padding-right: var(--space-4);
}

._eJwsRe {
  padding-left: var(--space-4);
}

._kaGCev {
  text-decoration-line: none;
}

._kKqLFw {
  transition-timing-function: ease-out;
}

._efExVU {
  transition-duration: 125ms;
}

._eaYTuA {
  transition-property: all;
}

._laGdYr {
  line-height: 1.4;
}

._bIcFyi {
  letter-spacing: 0.02em;
}

._ddSdla {
  height: var(--sizes-2);
}

._ckmCCf {
  font-weight: 500;
}

._dIHnma {
  font-size: var(--fontSizes-md);
}

._oIZSq {
  font-family: var(--fonts-sans);
}

._dtUAqZ {
  align-items: center;
}

._jBdvvl {
  justify-content: center;
}

._iqmwNh {
  display: flex;
}

._cKSYdt {
  cursor: pointer;
}

._cmjVcV {
  border-bottom-right-radius: var(--radii-1);
}

._cvjZAR {
  border-top-right-radius: var(--radii-1);
}

._fVdSKi {
  border-top-left-radius: var(--radii-1);
}

._hxITlq {
  border-bottom-left-radius: var(--radii-1);
}

._foQeyu {
  border-left-style: none;
}

._lmVhDS {
  border-bottom-style: none;
}

._jOpMN {
  border-right-style: none;
}

._eEUDVO {
  border-top-style: none;
}

._logdPK._logdPK._logdPK:active {
  background-color: var(--colors-primary500);
}

._iRIupi._iRIupi:not([disabled]):hover,
._iRIupi:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

._iePRtq[disabled] {
  color: var(--colors-tonal600);
}

._kkUuZE[disabled] {
  background-color: var(--colors-tonal300);
}

._htOODa {
  color: white;
}

._hPXiuU {
  background-color: var(--colors-primary500);
}

<div>
  <button
    class="_hPXiuU _htOODa _kkUuZE _iePRtq _iRIupi _logdPK _eEUDVO _jOpMN _lmVhDS _foQeyu _hxITlq _fVdSKi _cvjZAR _cmjVcV _cKSYdt _iqmwNh _jBdvvl _dtUAqZ _oIZSq _dIHnma _ckmCCf _ddSdla _bIcFyi _laGdYr _eaYTuA _efExVU _kKqLFw _kaGCev _eJwsRe _hCA-dkJ _fGrnfI _kmyMpM _ftwEqf _eGbica _gRExQX _knMBno scid-kemCgU"
    variant="outline"
  >
    BUTTON
  </button>
</div>
`;
